--- a/AnimatedWallpaperTest/AnimatedWallpaperTest-Info.plist
+++ b/AnimatedWallpaperTest/AnimatedWallpaperTest-Info.plist
@@ -24,15 +24,13 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>SBProceduralWallpaperClassNames</key>
+	<array>
+		<string>OnozOmgView</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
-	</array>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
